--- a/index.html
+++ b/index.html
@@ -35,25 +35,35 @@
           <p class="story-text">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
         </div>
 
-        <div>
-          <h2>Orca Spends Vacation at Land World Puget</h2>
-          <p class="story-text">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        </div>
+        <div class="stories">
 
-        <div class="earth-story">
-          <div class="image-content">
-            <span>Earth Spins Backwards for 2017</span>
+          <div class="story">
+            <div class="story-content">
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p class="story-text">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+            </div>
+
+
+            <div class="earth-story">
+              <div class="image-content">
+                <span>Earth Spins Backwards for 2017</span>
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div>
-          <h2>Burger for Breakfast: How Early is too Early?</h2>
-          <p class="story-text">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-        </div>
 
-        <div class="camera-story">
-          <div class="image-content">
-            <span>Research Shows Cameras Erase <br> Memory</span>
+          <div class="story">
+            <div class="story-content">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p class="story-text">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+            </div>
+
+            <div class="camera-story">
+              <div class="image-content">
+                <span>Research Shows Cameras Erase <br> Memory</span>
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -82,12 +92,34 @@
         <div class="image-cookie">
           <img src="./resources/images/img-news-bite.png" alt="Cookie">
         </div>
-        <div>
+
+        <div class="news-bites">
           <h3>NEWS BITES</h3>
-          <p class="story-text">Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+            <div class="bite">Cat Emoji Goes Viral</div>
+            <div class="bite">Buy Youtube Views</div>
+            <div class="bite">Home Business Advertising Ideas</div>
+            <div class="bite">Advertising Internet Online</div>
+            <div class="bite">Illustration in Marketing Materials</div>
+            <div class="bite">Finally a Top Secret Way You Can</div>
         </div>
       </div>
 
     </div>
+
+<!-- Footer -->
+
+    <footer>
+      <div class="footer-content">
+        <span class="footer-title">MYTimes</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+
+      <div class="copyright">© 2016, My Times (A Division of Codecademy bite)</div>
+    </footer>
   </body>
 </html>
